--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -169,4 +169,235 @@ jobs:
       with:
         name: FIRESTARTER_ONEAPI_${{ matrix.ONEAPI }}-linux
         path: build/src/FIRESTARTER_ONEAPI
+  build-windows:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-2019]
+        cfg:
+          - { CUDA: '0', ONEAPI: '0', MSVC: true }
+          - { CUDA: '0', ONEAPI: '0', MSVC: false }
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: Install CMake
+      uses: crazy-max/ghaction-chocolatey@v1
+      with:
+        args: install cmake
+    - name: Install Mingw
+      uses: crazy-max/ghaction-chocolatey@v1
+      if: matrix.cfg.MSVC == false
+      with:
+        args: install mingw
+    - uses: ilammy/msvc-dev-cmd@v1
+      if: matrix.cfg.MSVC == true
+    - name: Create build directory
+      shell: pwsh
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
+      shell: pwsh
+      run: |
+        cd build
+        cmake -G "MinGW Makefiles" ..
+    - name: Run CMake configure
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == true
+      shell: pwsh
+      run: |
+        cd build
+        cmake -G "NMake Makefiles" ..
+    - name: Build
+      shell: pwsh
+      run: |
+        cd build
+        cmake --build . -j2
+    - name: Copy Hwloc DLL
+      shell: pwsh
+      if: matrix.cfg.MSVC == true
+      run: |
+        cd build
+        cp ../lib/Hwloc/sources/contrib/windows/x64/Release/libhwloc-15.dll src
+    - name: Strip binary
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
+      run: |
+        cd build
+        strip src\FIRESTARTER.exe
+    - name: Test FIRESTARTER
+      if: matrix.cfg.CUDA == '0'
+      shell: pwsh
+      run: .\build\src\FIRESTARTER.exe -t 1
+    - uses: actions/upload-artifact@v2
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
+      with:
+        name: FIRESTARTER-windows
+        path: |
+          build\src\FIRESTARTER.exe
+          build\src\libhwloc-15.dll
+    - uses: actions/upload-artifact@v2
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == true
+      with:
+        name: FIRESTARTER-windows
+        path: |
+          build\src\FIRESTARTER.exe
+          build\src\libhwloc-15.dll
+  build-macos:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-10.15]
+        #os: [macos-11.0, macos-10.15]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: Install Homebrew dependencies
+      run: |
+        brew upgrade cmake
+    - name: Create build directory
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      run: |
+        cd build
+        cmake ..
+    - name: Build
+      run: |
+        cd build
+        make -j2
+    - name: Strip binary
+      run: |
+        cd build
+        strip src/FIRESTARTER
+    - name: Test FIRESTARTER
+      run: |
+        cd build
+        ./src/FIRESTARTER -t 1
+    - uses: actions/upload-artifact@v2
+      if: matrix.os == 'macos-10.15'
+      with:
+        name: FIRESTARTER-macOS_10.15
+        path: build/src/FIRESTARTER
+    - uses: actions/upload-artifact@v2
+      if: matrix.os == 'macos-11.0'
+      with:
+        name: FIRESTARTER-macOS_11.0
+        path: build/src/FIRESTARTER
+  create-download:
+    name: Create download for Website
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-macos, build-windows]
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+        path: 'sources'
+    - name: Checkout submodules
+      run: |
+        cd sources
+        git submodule update --init --recursive
+    - name: Create Build directory
+      run: |
+        mkdir build
+    # Linux
+    - name: Retrieve FIRESTARTER-linux 
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER FIRESTARTER-linux
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER-linux
+    # Linux CUDA 8.0
+    - name: Retrieve FIRESTARTER_CUDA_8.0-linux 
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER_CUDA_8.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_8.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_CUDA_8.0
+    # Linux CUDA 11.0
+    - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER_CUDA_11.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_11.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_CUDA_11.0
+    # Linux OneAPI
+    - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER_ONEAPI_2024.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2024.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_ONEAPI_2024.0
+    # OSX 11.0
+    #- name: Retrieve FIRESTARTER-macOS_11.0
+    #  uses: actions/download-artifact@v2
+    #  with:
+    #    name: FIRESTARTER-macOS_11.0
+    #    path: FIRESTARTER
+    #- name: Move binary to right directory
+    #  run: |
+    #    mv FIRESTARTER/FIRESTARTER ../FIRESTARTER-macOS_11.0
+    #    rm -rf FIRESTARTER
+    #    chmod +x ../FIRESTARTER-macOS_11.0
+    # OSX 10.15
+    - name: Retrieve FIRESTARTER-macOS_10.15
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER-macOS_10.15
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_10.15
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER-macOS_10.15
+    # Windows
+    - name: Retrieve FIRESTARTER-windows
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER-windows
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER.exe FIRESTARTER-windows.exe
+        mv FIRESTARTER/libhwloc-15.dll libhwloc-15.dll
+        rm -rf FIRESTARTER
+    # Create tar.gz
+    - name: Copy CHANGELOG, README and LICENSE
+      run: |
+        grep -v '\$\$' < sources/CHANGELOG > CHANGELOG
+        cat sources/README.md | tail -n +3 > README.md
+        cp sources/LICENSE LICENSE
+        cp sources/3rd-party-licenses . -r
+        cp sources/examples . -r
+    - name: Create tar.gz
+      run: |
+        mv FIRESTARTER-linux FIRESTARTER
+        rm -rf sources/.git*
+        tar -cvzf FIRESTARTER.tar.gz CHANGELOG README.md LICENSE libhwloc-15.dll 3rd-party-licenses examples sources FIRESTARTER*
+    - uses: actions/upload-artifact@v2
+      with:
+        name: FIRESTARTER.tar.gz
+        path: FIRESTARTER.tar.gz
 
