--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,7 +43,7 @@ jobs:
       shell: pwsh
       run: |
         cd build
-        dir C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0
+        dir "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.0"
         cmake -G "NMake Makefiles" -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCUDAToolkit_ROOT="C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0" ..
     - name: Build
       shell: pwsh
