--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,4 +42,4 @@ jobs:
       if: matrix.cfg.CUDA != '0'
       shell: pwsh
       run: |
-        dir C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.0"
+        dir "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.0"
