--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
       matrix:
+      matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
         CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
